apps/media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    name: sonarr
spec:
  tls:
    - hosts:
        - sonarr.internal.vkolobara.com
      secretName: sonarr-cert
  rules:
    - host: sonarr.internal.vkolobara.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
